new gh-pages version

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         organization: 'Embrace Kids Foundation.',
         df_id: 20486,
         secure_url: 'https://secure2.convio.net/vateam',
+        success_redirect: 'http://blackbaud.com',
+        error_redirect: 'http://blackbaud.com',
         ecards: [
             {
                 id: 0,
