--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>NgLODonate</title>
-    <base href="/migration-project/">
+    <base href="/ng-lo-donate/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
